Updated cors config

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,6 +1,6 @@
 PORT = 8000
 MONGODB_URI = 
-HOST = 'http://localhost:5173' #frontend url
+ALLOWED_ORIGINS= http://localhost:5173,https://your-frontend.netlify.app
 CLOUDINARY_CLOUD_NAME = 
 CLOUDINARY_API_KEY = 
 CLOUDINARY_API_SECRET = 
